Finish frontend design and metadata

--- a/frontend-website/public/index.html
+++ b/frontend-website/public/index.html
@@ -5,11 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo2.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +20,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ResumeWords</title>
+    <!-- Primary Meta Tags -->
+    <title>ResumeWords - AI powered keyword extraction</title>
+    <meta name="title" content="ResumeWords - AI powered keyword extraction">
+    <meta name="description" content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://www.resume-words.com/">
+    <meta property="og:title" content="ResumeWords - AI powered keyword extraction">
+    <meta property="og:description" content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings.">
+    <meta property="og:image" content="%PUBLIC_URL%/logo2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://www.resume-words.com/">
+    <meta property="twitter:title" content="ResumeWords - AI powered keyword extraction">
+    <meta property="twitter:description" content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings.">
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo2.png">
+
   </head>
 
   <body>
