add tagline + place desc in box

--- a/frontend-website/public/index.html
+++ b/frontend-website/public/index.html
@@ -22,23 +22,37 @@
     -->
     <!-- Primary Meta Tags -->
     <title>ResumeWords - AI powered keyword extraction</title>
-    <meta name="title" content="ResumeWords - AI powered keyword extraction">
-    <meta name="description" content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings.">
+    <meta name="title" content="ResumeWords - AI powered keyword extraction" />
+    <meta
+      name="description"
+      content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings."
+    />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.resume-words.com/">
-    <meta property="og:title" content="ResumeWords - AI powered keyword extraction">
-    <meta property="og:description" content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings.">
-    <meta property="og:image" content="%PUBLIC_URL%/logo2.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.resume-words.com/" />
+    <meta
+      property="og:title"
+      content="ResumeWords - AI powered keyword extraction"
+    />
+    <meta
+      property="og:description"
+      content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo2.png" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="http://www.resume-words.com/">
-    <meta property="twitter:title" content="ResumeWords - AI powered keyword extraction">
-    <meta property="twitter:description" content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/logo2.png">
-
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="http://www.resume-words.com/" />
+    <meta
+      property="twitter:title"
+      content="ResumeWords - AI powered keyword extraction"
+    />
+    <meta
+      property="twitter:description"
+      content="Nail your resume and cover letter by leveraging AI and NLP to extract keywords from online job postings."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo2.png" />
   </head>
 
   <body>
